 * Added a new entity &logo; which is an image of the url spec'd in site_logo
 * Added style/auto and javascript/auto which cause all files in these dirs 
    to be included by the template. Handy for plugins.
 * Sorted some issues with print.css
 * Moved appropriate .js and .css into the auto dirs.

2006-09-20 cjg
 * Upload component now takes which doc fields to ask for as a workflow 
    config.
 * Moved style related images to /style/images rather than /images/style
 * Moved all style related images into that dir.
 * Added option to xml_to_metafield to take an alternate dataset
 * Added a minimal green theme to prove themes are working.

2006-09-20 cjg
 * Phrases now work from a directory of phrase files, not a single file.
 * Broke up phrases.xml for archive phrases.

2006-09-20 cjg
 * Details now has 2 versions staff/owner
 * Each version links into the edit pages if allowed
 * Fixed bug in the problems warnings which jumped always into owner
    edit rather than the appropriate type of edit.
 * Convert was dieing if it could not work out the mime type of a file. Now
    it just returns undef.

2006-09-21 cjg
 * Compound fields now have the sub-field expressed withing them. 
 * Compound fields input/render has now been cleaned up.
 * Fixed a bug in the hyperlinking problems to the right edit scren code
 * Added file_perms and dir_perms to SystemSettings.tmpl

2006-09-22 cjg
 * Fixed rendering bugs in History

2006-09-22 cjg
 * Fixed citations-don't-link bug.

2006-09-26 cjg
 * Renamed some inner variables and method names in MetaField::Compound
 * Fixed bug in Compound so that field id's are prefixed by their subfield
    name too.

2006-09-27 moj
 * Added phrases for most plugins
 * Component render_title/render_help using phrases by default
 * Upload now uses correct document ID for format delete
 * Removed Review component

2006-09-27 moj
 * Added $icons param before slow_tabs in Session::render_tabs
 * Modified EPrint View and Upload accordingly.