@@ -10,7 +10,7 @@
 
 <!-- document citations -->
 
-<ep:linkhere><span class="ep_document_citation"><ep:print expr='format' /> <ep:if test="formatdesc"> (<ep:print expr="formatdesc" />)</ep:if></span></ep:linkhere>
+<ep:linkhere><span class="ep_document_citation"><ep:print expr='format' /><ep:if test="formatdesc"> (<ep:print expr="formatdesc" />)</ep:if></span></ep:linkhere>
 <ep:if test="security != 'public'"> - <ep:print expr="security" /></ep:if>
 <ep:choose>
   <ep:when test="format = 'pdf'"> - Requires a PDF viewer such as <a href="http://www.cs.wisc.edu/~ghost/gsview/index.htm">GSview</a>, <a href="http://www.foolabs.com/xpdf/download.html">Xpdf</a> or <a href="http://www.adobe.com/products/acrobat/">Adobe Acrobat Reader</a></ep:when>
